# terra-incognita

./: .env.example  .gitignore  CLAUDE.md  MLproject  README.md  docker-compose.yml  justfile  pyproject.toml  python_env.yaml
.claude/skills/update-ssot/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.plans/: .gitignore  README.md
.plans/contracts/: model-registry.md  observability.attributes.yaml  observability.md  serving-io.md
.plans/infra/: PLAN.md
.plans/training/: PLAN.md
configs/: baseline.yaml  cct_real.yaml
contracts/: bbox-format.md  dataset-conventions.md  mlflow-topology.md
dashboard/: DESIGN.md
docker/: mlflow.Dockerfile
docker/floci-init/ready.d/: 01-create-buckets.sh
infra/: CONTEXT.md
scripts/: dataset_smoke.py  real_dataset.py  real_train.py  serve_smoke.py  serving_pyfunc.py  stack_smoke.py  train_smoke.py
src/terra_incognita/: __init__.py  cli.py  config.py  experiment.py
src/terra_incognita/data/: __init__.py  coco_to_yolo.py  lila.py  registration.py  subset.py
src/terra_incognita/obs/: __init__.py  emit.py  events.py  registry.py
src/terra_incognita/serving/: __init__.py  detections.py
src/terra_incognita/training/: __init__.py  device.py  lifecycle.py  provenance.py
tests/: conftest.py  test_coco_to_yolo.py  test_dataset_registration.py  test_experiment_config.py  test_lila.py  test_obs_event.py  test_registry_guard.py  test_serving.py  test_subset.py  test_training.py
tests/fixtures/: synthetic.py
tests/smoke/: test_smoke_pipeline.py
training/: CONTEXT.md
