[project]
name = "terra-incognita"
version = "0.1.0"
description = "Camera-trap failure-mode CV training pipeline (MLflow tracking + OTel wide events)."
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.optional-dependencies]
ml = [
    "torch>=2.4",
    "torchvision>=0.19",
    "ultralytics>=8.2",
    "mlflow>=3.1",
    # MLflow doesn't depend on boto3, but with --no-serve-artifacts the client uploads
    # artifacts DIRECTLY to S3 (floci/real) — so the training client needs it, the same
    # reason docker/mlflow.Dockerfile adds it to the server image.
    "boto3>=1.34",
]

[project.scripts]
terra-incognita = "terra_incognita.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "ty>=0.0.1",
    "pytest>=8",
    # Test-only: the synthetic fixture generator draws shape-on-noise images (PLAN §10).
    # Pillow alone covers it — Image.effect_noise for the background, ImageDraw for the
    # shapes — so we avoid pulling numpy into the lean CI core+dev sync. The real ML stack
    # (`--extra ml`) already includes Pillow transitively via ultralytics.
    "pillow>=10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terra_incognita"]

# ---------------------------------------------------------------------------
# Torch wheel parity. The PyTorch project ships platform-specific
# wheels from dedicated indexes, not PyPI. We route by platform marker:
#   - macOS (darwin): the CPU index — these wheels include Apple MPS support.
#   - Linux: the CUDA cu124 index — the GPU spot box gets CUDA with zero code change.
# `explicit = true` means these indexes are used ONLY for the packages pinned to
# them below (they never shadow PyPI for everything else).
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ty.environment]
python-version = "3.12"

# scripts/ holds runnable operational glue (e.g. the local-stack smoke), which imports the
# heavy `ml` extra (mlflow). CI typechecks the lean sync, so keep scripts/ out of the typed
# library surface — same boundary ruff draws with `src = ["src", "tests"]` above.
[tool.ty.src]
exclude = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests don't need return-type annotations on every test function.
"tests/**" = ["ANN201", "ANN001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
